--- a/netlify.toml
+++ b/netlify.toml
@@ -6,8 +6,9 @@
 [dev]
   functions = "netlify/functions"
   functionsPort = 9999
-  # Increase timeout for local dev
-  functions_timeout = 30
+  # Increased timeout for local dev (OpenAI Vision can take 15-20s)
+  # Value is in milliseconds
+  timeout = 30
 
 [build]
   command = "vite build"
