--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@eslint/js": "^9.36.0",
     "@netlify/functions": "^4.2.6",
     "@types/node": "^24.6.0",
+    "@types/pdfjs-dist": "^2.10.377",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
